# BMW-TensorFlow-Training-GUI

./: .gitignore  LICENSE  README.md  README123.md  adjust_basedir_path.py  build.yml  build_cpu.yml  build_gpu.yml  install_compose.sh  install_full.sh  install_minimal.sh  proxy.json  pyproject.toml  run.yml  run_cpu.yml  run_gpu.yml  set_proxy_args.py  setup_solution_parameters.sh
datasets/sample_dataset/: objectclasses.json
docker_sdk_api/: containers.py  dockerfile  main.py
docker_sdk_api/api/: alias_provider_sql.py  checkpoint_validator.py  dataset_validator.py  main.py  paths.json  port_scanner.py
docker_sdk_api/api/controllers/: dataset_controller.py  infrastructure_controller.py  jobs_controller.py  models_controller.py  tensorboard_controller.py
docker_sdk_api/assets/: environment.json  paths.json
docker_sdk_api/docker/: Dockerfile  requirements.txt
docker_sdk_api/docs/: deploy.md
docker_sdk_api/domain/exceptions/: api_request_exception.py  application_error.py  dataset_exception.py  docker_exception.py  infrastructure_exception.py  job_exception.py  models_exception.py  tensorboard_exception.py
docker_sdk_api/domain/models/: api_response.py  container_info.py  container_settings.py  dataset_info.py  dataset_name.py  docker_client.py  network_info.py  paths.py  tensorboard_port.py  urls.py
docker_sdk_api/shared/helpers/: alias_provider_sql.py  get_model_zip.py  (+2 more)
docs/: Tips.md
gui/: Dockerfile  Dockerfile_OLD  README.md  angular.json  dockerfile  karma.conf.js  package-lock.json  package.json
gui/e2e/: protractor.conf.js
gui/nginx/: default.conf  default.conf~
gui/src/: index.html  styles.css  theme.less
inference/: README.md
inference/docker/: dockerfile  requirements.txt
inference_api/: README.md
inference_api/docker/: dockerfile  dockerfile-gpu  requirements.txt
tests/: conftest.py  test_infrastructure_validation.py
training_api/: containers.py  dockerfile  main.py  weights_crawler.py
training_api/api/: main.py
training_api/assets/: default_configuration.json  networks.json  networks_url.json  paths.json
training_api/config_templates/: frcnn_resnet_50_101.py  ssd_mobilenet_inception.py  ssd_resnet_50_fpn.py
training_api/docs/: TRAIN.md  Tensorboard.md  Tips.md
(+752 files in other folders)
